crates/aiy/tests/snapshots/ptb_files_tests__invalid_sender_1.ptb.snap
---
source: crates/aiy/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --sender @abcd 
   ·          ──┬──
   ·            ╰── Expected a numerical address but got a named address 'abcd'
   ╰────
